# A-heterogeneous-dataflow-system

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data/YSB_data/: ad_ids.txt  c_id.txt  mapping_10000.txt
scripts/: HeaderUpdater.sh  LHeader.txt  Postgres-SanityCheck.sql  air_slurm_exp.sh
src/: CMakeLists.txt  Makefile  host.cpp
src/batching/: Inference.cpp  Inference.hpp  Map.cpp  Map.hpp  MatrixMul.cpp  MatrixMul.hpp  Reduce.cpp  Reduce.hpp  Resize.cpp  Resize.hpp
src/communication/: Message.cpp  Message.hpp  Window.cpp  Window.hpp  Window.hpp.orig
src/configuration/: HashConfig.hpp
src/connector/: BinConnector.cpp  BinConnector.hpp  DataGenerator.cpp  DataGenerator.hpp  ImageLoad.cpp  ImageLoad.hpp
src/cudaCode/: CMakeLists.txt  MatrixMul.cu  MatrixMul.cuh  a.out  gpuMap.cu  gpuReduce.cu  mainMatrixMul.cu  map  mat  multi.cu  multi.cuh  reduce  sum.cu  sum.cuh
src/dataflow/: Dataflow.cpp  Dataflow.hpp  Vertex.cpp  Vertex.hpp
src/function/: Function.cpp  Function.hpp  SquareFunction.cpp  SquareFunction.hpp  SumFunction.cpp  SumFunction.hpp
src/input/: FileInput.cpp  FileInput.hpp  Input.cpp  Input.hpp
src/main/: main.cpp
src/output/: FileOutput.cpp  FileOutput.hpp  Output.cpp  Output.hpp
src/partitioning/: Hash.cpp  Hash.hpp  PairPartition.hpp  Partition.hpp
src/serialization/: Serialization.cpp  Serialization.hpp
src/usecases/: GpuMR.cpp  GpuMR.hpp  GpuMatrixMul.cpp  GpuMatrixMul.hpp  MapReduce.cpp  MapReduce.hpp  NNInference.cpp  NNInference.hpp
tools/: TPCH.java
